merul_Dev/src/objects/Tabs_Preference__c.object
<CustomObject>
    <fields>
        <fullName>Preference_Tab_1__c</fullName>
        <label>Preference Tab 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preference_Tab_2__c</fullName>
        <label>Preference Tab 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preference_Tab_3__c</fullName>
        <label>Preference Tab 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <label>UserId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Tabs Preference</label>
    <nameField>
        <label>Tabs Preference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tabs Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>